
  * debian/rules:
    - switch WEBDAV_LIB to the (new) curl since it now has the test
      coverage instead of neon
  * debian/tests/*, debian/tests/control.in: strip cppunit- from
    cppunit-slowcheck and -unitcheck (the latter contains junit checks, too).
    Keep it for cppunit-subsequentcheck since that ecplicitely disables
    junit (which is tested in junit-subsequentcheck)

 -- Rene Engelhard <rene@debian.org>  Sat, 30 Oct 2021 10:19:40 +0200

libreoffice (1:7.3.0~alpha1-4) experimental; urgency=medium

  * debian/rules:
    - disable LTO on mips64el
    - also uncomment smoketest.jar move to -smoketest-data again (although
      effectively unused..) (closes: #998435)
    - don't check for AUTOPKGTEST_TMP, it seems to not been set in build stage
      already (add hack to grep for autopkgtest in pwd instead).
      Don't run the checks in build* if in autopkgtest builds (as they are run
      later anyway)
    - Separate RUN_MAKE_CHECK into BUILD_TESTS/RUN_MAKE_CHECK
    - use -g1 on autopkgtest builds (saving disc space/time on all those
      copies...)
    - don't specify --without-cppunit in CONFIGURE_FLAGS_INDEP per
      default (only explicit build-indep builds)
  * debian/tests/*, debian/tests/patches/*:
    - move cppunit part out of smoketest-standalone.diff into
      cppunit-standalone.diff
  * debian/tests/control.in:
    - make uno superficial, it only runs the bridgetest; remove it from
      cppunit-subsequentcheck
    - move smoketest after the cppunit tests and run it only on the
      architectures those, too (also make it build-needed); add missing
      libreoffice-smoketest-data dependency
  * debian/tests/*:
    - only create config_host.mk when not existing (e.g. architectures having
      no tests with build-needed and thus there is no build which created it)
    - don't try to run test-extension/odk-build-examples* as root, skip them
      if doing so
  * debian/tests/control.in, debian/rules: