@@ -10,6 +10,12 @@ Tests: access2base-import
 Depends: python3, python3-access2base
 Restrictions: superficial
 
+# Is there a need for this small test given we run the UI tests etc.?
+Tests: smoketest
+Architecture: amd64 arm64
+Depends: @builddeps@, libreoffice-smoketest-data, libreoffice-dev, libreoffice-core, libreoffice-writer, libreoffice-calc, libreoffice-impress, libreoffice-math, libreoffice-base, libreoffice-sdbc-hsqldb, libreoffice-sdbc-firebird
+Restrictions: allow-stderr, build-needed, rw-build-tree, superficial
+
 # this is already done by smoketest upstream, but fails when doing it against
 # the installed LO. works standalone, though, so it's patched out of the
 # smoketest. Do it here separately.
@@ -92,13 +98,7 @@ Restrictions: build-needed, rw-build-tree, allow-stderr, superficial
 Tests: unitcheck
 Architecture: amd64 arm64
 Depends: @builddeps@, libreoffice,libreoffice-core,libreoffice-common,libreoffice-java-common,libreoffice-writer,libreoffice-calc,libreoffice-impress,libreoffice-draw,libreoffice-math,libreoffice-base-core,libreoffice-base,libreoffice-style-breeze,libreoffice-style-colibre,libreoffice-style-sifr,libreoffice-style-elementary,libreoffice-style-karasa-jaga,libreoffice-style-sukapura,libreoffice-gnome,python3-uno,libreoffice-script-provider-python,libreoffice-script-provider-bsh,libreoffice-script-provider-js,libreoffice-sdbc-hsqldb,libreoffice-sdbc-mysql,libreoffice-base-drivers,python3-access2base,libofficebean-java,uno-libs-private,libuno-sal3,libuno-cppu3,ure,ure-java,libunoloader-java,liblibreoffice-java,libreoffice-wiki-publisher,libreoffice-report-builder,libreoffice-report-builder-bin,libreoffice-nlpsolver,fonts-opensymbol,libreoffice-dev,libreoffice-dev-gui,libreoffice-dev-common,libreofficekit-dev,libreoffice-gtk3,gir1.2-lokdocview-0.1,liblibreofficekitgtk,libreofficekit-data,libreoffice-kf5,libreoffice-qt5,libreoffice-plasma,libreoffice-sdbc-postgresql,libreoffice-evolution,libreoffice-subsequentcheckbase,libreoffice-smoketest-data,libreoffice-librelogo,libreoffice-sdbc-firebird
-Restrictions: build-needed, rw-build-tree, allow-stderr, superficial
-
-# Is there a need for this small test given we run the UI tests etc.?
-Tests: smoketest
-Architecture: amd64 arm64
-Depends: @builddeps@, libreoffice-smoketest-data, libreoffice-dev, libreoffice-core, libreoffice-writer, libreoffice-calc, libreoffice-impress, libreoffice-math, libreoffice-base, libreoffice-sdbc-hsqldb, libreoffice-sdbc-firebird
-Restrictions: allow-stderr, build-needed, rw-build-tree, superficial
+Restrictions: build-needed, rw-build-tree, allow-stderr, superficial, skippable
 
 # This one tests real connection to a MySQL and works by symlinking that one
 # specific library to the one in libreoffice-sdbc-mysql
