@@ -10,6 +10,12 @@ Tests: access2base-import
 Depends: python3, python3-access2base
 Restrictions: superficial
 
+# Is there a need for this small test given we run the UI tests etc.?
+Tests: smoketest
+Architecture: %OOO_CHECK_FATAL_ARCHS%
+Depends: @builddeps@, libreoffice-smoketest-data, libreoffice-dev, libreoffice-core, libreoffice-writer, libreoffice-calc, libreoffice-impress, libreoffice-math, libreoffice-base, libreoffice-sdbc-hsqldb, libreoffice-sdbc-firebird
+Restrictions: allow-stderr, build-needed, rw-build-tree, superficial
+
 # this is already done by smoketest upstream, but fails when doing it against
 # the installed LO. works standalone, though, so it's patched out of the
 # smoketest. Do it here separately.
@@ -92,13 +98,7 @@ Restrictions: build-needed, rw-build-tree, allow-stderr, superficial
 Tests: unitcheck
 Architecture: %OOO_CHECK_FATAL_ARCHS%
 Depends: @builddeps@, %AUTOPKGTEST_CPPUNIT_PACKAGES%
-Restrictions: build-needed, rw-build-tree, allow-stderr, superficial
-
-# Is there a need for this small test given we run the UI tests etc.?
-Tests: smoketest
-Architecture: %OOO_CHECK_FATAL_ARCHS%
-Depends: @builddeps@, libreoffice-smoketest-data, libreoffice-dev, libreoffice-core, libreoffice-writer, libreoffice-calc, libreoffice-impress, libreoffice-math, libreoffice-base, libreoffice-sdbc-hsqldb, libreoffice-sdbc-firebird
-Restrictions: allow-stderr, build-needed, rw-build-tree, superficial
+Restrictions: build-needed, rw-build-tree, allow-stderr, superficial, skippable
 
 # This one tests real connection to a MySQL and works by symlinking that one
 # specific library to the one in libreoffice-sdbc-mysql
