@@ -9,6 +9,14 @@ libreoffice (1:7.3.0~beta1~git20211103-1) UNRELEASED; urgency=medium
     cppunit-slowcheck and -unitcheck (the latter contains junit checks, too).
     Keep it for cppunit-subsequentcheck since that ecplicitely disables
     junit (which is tested in junit-subsequentcheck)
+  * debian/test/unitcheck:
+    - also filter out the unoidl module (no idea why it
+      worked in my run and not in ci, but...)
+    - don't allow test as root, the sal test fails miserably as root
+  * debian/tests/control.in:
+    - move smoketest up again (before the test-extension*) tests to stress
+      it's importance  (and it's restricted on archs where we have the
+      cpppunit-* tests having build-needed anyway)
 
  -- Rene Engelhard <rene@debian.org>  Sat, 30 Oct 2021 10:19:40 +0200
 
